tests/snapshots/html_only__bold.snap
---
source: tests/html_only.rs
expression: result
---
<div>
  <h1>Main Heading</h1>
  <p>
    Some content with
    <strong>bold text</strong>
    .
  </p>
</div>
