tests/snapshots/html_only__doctype-2.snap
---
source: tests/html_only.rs
expression: formatted_output
---
<!DOCTYPE html>
<title>Page Title</title>
