tests/snapshots/html_only__form-2.snap
---
source: tests/html_only.rs
expression: formatted_output
---
<form action="/submit" method="post">
  <label for="name">Name:</label>
  <input type="text" id="name">
</form>
