tests/snapshots/html_only__form.snap
---
source: tests/html_only.rs
expression: input
---
<form action="/submit" method="post"><label for="name">Name:</label><input type="text" id="name"></form>
