tests/snapshots/html_only__hello_with_div-2.snap
---
source: tests/html_only.rs
expression: formatted_output
---
<div>
    <p>Hello, world!</p>
</div>
