tests/snapshots/html_only__hello_world_with_newline.snap
---
source: tests/html_only.rs
expression: input
---
        <p>
        Hello,     
    world!
  </p>
