tests/snapshots/html_only__image-2.snap
---
source: tests/html_only.rs
expression: formatted_output
---
<img src="image.jpg" alt="A test image">
