tests/snapshots/html_only__link-2.snap
---
source: tests/html_only.rs
expression: formatted_output
---
<a href="https://example.com">Visit us</a>
